--- a/Galaga/Galaga.cbp
+++ b/Galaga/Galaga.cbp
@@ -29,11 +29,11 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="`pkg-config gtk+-2.0 --cflags`" />
 			<Add option="-Wall" />
+			<Add option="`pkg-config --libs --cflags gtk+-2.0`" />
 		</Compiler>
 		<Linker>
-			<Add option="`pkg-config gtk+-2.0 --libs`" />
+			<Add option="`pkg-config --libs --cflags gtk+-2.0`" />
 		</Linker>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
