--- a/Galaga/Galaga.cbp
+++ b/Galaga/Galaga.cbp
@@ -35,6 +35,7 @@
 		<Linker>
 			<Add option="`pkg-config --libs --cflags gtk+-2.0`" />
 		</Linker>
+		<Unit filename="Headers/Estructuras.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
